(fix): Use contrasting captcha colors in homepage form

--- a/app/src/components/captcha/captcha.component.scss
+++ b/app/src/components/captcha/captcha.component.scss
@@ -21,3 +21,10 @@
     box-sizing: content-box;
   }
 }
+
+minds-homepage {
+  .m-captcha--sum-question {
+    color: #ffffff !important;
+    text-shadow: 0 0 3px #000000;
+  }
+}
